# dex-decompiler

./: Cargo.toml  README.md
dex-decompiler-py/: Cargo.toml  README.md  pyproject.toml
dex-decompiler-py/examples/: decompile_example.py
dex-decompiler-py/src/: lib.rs
src/: error.rs  lib.rs
src/decompile/: annotations.rs  cfg.rs  graph.rs  ir.rs  mod.rs  pass.rs  pending_intent.rs  read_write.rs  region.rs  simplify.rs  try_catch.rs  type_infer.rs  value_flow.rs
src/detectors/: hardcoded_secrets.rs  insecure_logging.rs  intent_spoofing.rs  ipc_intent_validation.rs  mod.rs  pending_intent.rs  rce_dynamic_loading.rs  sql_injection.rs  types.rs  webview.rs
src/emulator/: interpret.rs  mod.rs  state.rs  stubs.rs
src/java/: mod.rs
tests/: decompiler_tests.rs  emulator_tests.rs
tests/decompiler/: control_flow.rs  dataflow.rs  equivalence.rs  filters.rs  helpers.rs  imports.rs  mod.rs  pending_intent.rs  value_flow.rs
